fix nav title on small screens

--- a/src/_assets/styles/_07_layout.scss
+++ b/src/_assets/styles/_07_layout.scss
@@ -52,6 +52,10 @@ body.video cite { color: #fff; }
     [class^='icon-']:before, [class*=' icon-']:before {
         margin-right: rem-calc(8);
     }
+
+    .top-bar .title-area .name h1 a {
+        width: auto;
+    }
 }
 
 
